--- a/src/output.css
+++ b/src/output.css
@@ -9,7 +9,7 @@
   border-style: solid;
   /* 2 */
   border-color: #e5e7eb;
-  /* 2 */
+  font-family: "Baloo Bhaijaan 2", sans-serif;
 }
 
 ::before,
