--- a/src/output.css
+++ b/src/output.css
@@ -1,4 +1,11 @@
+/*
+! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
+*/
 
+/*
+1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
+2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
+*/
 
 *,
 ::before,
@@ -10,13 +17,23 @@
   border-style: solid;
   /* 2 */
   border-color: #e5e7eb;
-  font-family: "Baloo Bhaijaan 2", sans-serif;
+  /* 2 */
 }
 
 ::before,
 ::after {
   --tw-content: "";
 }
+
+/*
+1. Use a consistent sensible line-height in all browsers.
+2. Prevent adjustments of font size after orientation changes in iOS.
+3. Use a more readable tab size.
+4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
+6. Use the user's configured `sans` font-variation-settings by default.
+7. Disable tap highlights on iOS
+*/
 
 html,
 :host {
@@ -40,12 +57,23 @@ html,
   /* 7 */
 }
 
+/*
+1. Remove the margin in all browsers.
+2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+*/
+
 body {
   margin: 0;
   /* 1 */
   line-height: inherit;
   /* 2 */
 }
+
+/*
+1. Add the correct height in Firefox.
+2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+3. Ensure horizontal rules are visible by default.
+*/
 
 hr {
   height: 0;
@@ -65,6 +93,10 @@ abbr:where([title]) {
   text-decoration: underline dotted;
 }
 
+/*
+Remove the default font size and weight for headings.
+*/
+
 h1,
 h2,
 h3,
@@ -74,6 +106,10 @@ h6 {
   font-size: inherit;
   font-weight: inherit;
 }
+
+/*
+Reset links to optimize for opt-in styling instead of opt-out.
+*/
 
 a {
   color: inherit;
@@ -613,6 +649,10 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -682,6 +722,10 @@ video {
   padding: 0.75rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .p-8 {
   padding: 2rem;
 }
@@ -711,14 +755,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-4 {
@@ -780,7 +824,7 @@ video {
 }
 
 * {
-  font-family: "IranSans";
+  font-family: "Baloo Bhaijaan 2", sans-serif;
   outline: none;
   padding: 0;
   margin: 0;
