--- a/src/output.css
+++ b/src/output.css
@@ -903,7 +903,7 @@ video {
 }
 
 * {
-  font-family: "IranSans";
+  font-family: "Baloo Bhaijaan 2", sans-serif;
   outline: none;
   padding: 0;
   margin: 0;
